# retrozip

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
docs/: box.md
libs/lzma/lib/win/x64/: liblzma.lib  lzma.exp  lzma.lib  lzma.pdb.srcsrv
libs/zlib/lib/win_x64/: zlib.lib
projects/msvc2017/: retrozip.sln
projects/msvc2017/cellar/: cellar.vcxproj  cellar.vcxproj.filters
projects/msvc2017/cli/: cli.vcxproj  cli.vcxproj.filters
projects/msvc2017/code/: code.vcxitems  code.vcxitems.filters
projects/msvc2017/dll/: dll.vcxproj  dll.vcxproj.filters
projects/msvc2017/retrozip/: retrozip.vcxproj  retrozip.vcxproj.filters
projects/msvc2017/toolbox/: toolbox.vcxitems  toolbox.vcxitems.filters
projects/xcode/retrozip.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  cellar.cpp  cli.cpp  main.cpp  tests.cpp
src/base/: common.cpp  common.h  exceptions.h  file_system.cpp  file_system.h  path.cpp  path.h
src/box/: CMakeLists.txt  archive.cpp  archive.h  archive_builder.cpp  archive_builder.h  filter_options.cpp  filter_options.h  filter_queue.cpp  filter_queue.h  header.h
src/cellar/fs/: cellar_fs.cpp  cellar_fs.h
src/cli/: args.cpp  args.h  box.h  cli.cpp  dll.cpp  libbox.cpp
src/core/: archive.cpp  archive.h  data_filter.h  data_pipe.h  data_source.h  file_data_source.h  filters.h  header.h  memory_buffer.h  stream.h
src/crypto/: CMakeLists.txt  aes.cpp  crypto.h
src/data/: database.h  entry.h  hash_map.h
src/filters/: CMakeLists.txt  deflate_filter.cpp  deflate_filter.h  filters.h  lzma_filter.cpp  lzma_filter.h  xdelta3_filter.cpp  xdelta3_filter.h
src/hash/: CMakeLists.txt  hash.h  md5.cpp  sha1.cpp
src/libs/: args.h  catch.h
src/parsers/: clrmamepro.cpp  logiqx.cpp  parser.h
src/patch/xdelta3/: xdelta3-second.h  xdelta3.cpp  xdelta3.h
src/tbx/base/: common.cpp  common.h  file_system.cpp  path.cpp  path.h
src/tbx/streams/: file_data_source.h  memory_buffer.h
src/test/: CMakeLists.txt  catch.h  test_support.cpp  test_support.h
src/zip/: zip_mutator.cpp  zip_mutator.h
